Cleaned up LootRegistry